--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 <head>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sprint Challenge - Home</title>
-
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Rubik">
 	<script src="https://kit.fontawesome.com/5b12ffad4b.js" crossorigin="anonymous"></script>
 </head>
 
@@ -15,15 +15,22 @@
 	<div>
 		<!-- header -->
 		<header>
-			<div>
-				BLOOMTECH BAR AND GRILL
-
-				<!-- nav -->
-				Menu
-				Reservations
-				Special Offers
-				Contact
-			</div>
+			<a href="index.html"><h1>BLOOMTECH BAR AND GRILL</h1></a>
+			
+			
+			<nav>
+				<div>
+					<a href="menu.html">Menu</a>
+					<a href="#">Reservations</a>
+					<a href="#gallery">Special Offers</a>
+					<a href="#contacts">Contact</a>
+				</div>
+				<div>
+					<a href="https://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+					<a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+					<a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+				</div>
+			</nav>
 		</header>
 
 		<!-- gallery section -->
@@ -31,23 +38,24 @@
 			<div>
 				<h2>OUR FOOD</h2>
 
-				img/food-avocadotoast.jpg
+				<img src="./img/food-avocadotoast.jpg">
 
-				img/food-burger.jpg
+				<img src="./img/food-burger.jpg">
 
-				img/food-poutine.jpg
+				<img src="./img/food-poutine.jpg">
 
-				img/food-ribs.jpg
+				<img src="./img/food-ribs.jpg">
 
-				img/food-sandwich.jpg
+				<img src="./img/food-sandwich.jpg">
 
-				img/food-sausage.jpg
+				<img src="./img/food-sausage.jpg">
 
-				img/food-steak.jpg
+				<img src="./img/food-steak.jpg">
 
-				img/food-tacos.jpg
+				<img src="./img/food-tacos.jpg">
 
-				img/food-wings.jpg
+				<img src="./img/food-wings.jpg">
+
 			</div>
 		</section>
 
@@ -82,7 +90,7 @@
 		<div class="spacer"></div>
 
 		<!-- contact section -->
-		<section class="contact">
+		<section id="contact">
 			<div class="contact-container">
 				<h2>CONTACT US</h2>
 
@@ -125,15 +133,24 @@
 		<!-- footer -->
 		<footer>
 			<!-- email signup -->
-			Join our mailing list!
-			Sign Up
-			<!-- nav -->
-			Menu
-			Reservations
-			Special Offers
-			Contact
-			<!-- copyright -->
-			©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.
+			<h4>Join our mailing list!</h4>
+			<div>
+				<input type="text" placeholder="Email Address">
+				<button type="button">Sign Up</button>
+			</div>
+
+			<div>
+				<nav>
+					<a href="menu.html">Menu</a>
+					<a href="#">Reservations</a>
+					<a href="#gallery">Special Offers</a>
+					<a href="#contact">Contact</a>
+				</nav>
+			</div>
+
+			<div>
+				<h4>©2022 BloomTech Restaurant Group, Inc. All Rights Reserved.</h4>
+			</div>	
 		</footer>
 	</div>
 </body>
