--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,7 @@
             <!-- nav -->
             <nav>
                 <div>
-                    <a href="#menu">Menu</a>
+                    <a href="menu.html">Menu</a>
 					<a href="#">Reservations</a>
 					<a href="#gallery">Special Offers</a>
 					<a href="#contacts">Contact</a>
